testdata/baselines/reference/submodule/conformance/jsdocTemplateConstructorFunction.errors.txt
templateTagOnConstructorFunctions.js(1,1): error TS8004: Type parameter declarations can only be used in TypeScript files.


==== templateTagOnConstructorFunctions.js (1 errors) ====
    /**
    ~~~
     * @template U
    ~~~~~~~~~~~~~~
     * @typedef {(u: U) => U} Id
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     */
    ~~~
    /**
    ~~~
     * @param {T} t
    ~~~~~~~~~~~~~~~
     * @template T
    ~~~~~~~~~~~~~~
     */
    ~~~
    function Zet(t) {
    ~~~~~~~~~~~~~~~~~
        /** @type {T} */
    ~~~~~~~~~~~~~~~~~~~~
        this.u
    ~~~~~~~~~~
        this.t = t
    ~~~~~~~~~~~~~~
    }
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    /**
     * @param {T} v
     * @param {Id<T>} id
     */
    Zet.prototype.add = function(v, id) {
        this.u = v || this.t
        return id(this.u)
    }
    var z = new Zet(1)
    z.t = 2
    z.u = false
    